# 3DPoseEvaluator

./: .dockerignore  .gitattributes  .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.pipeline.yml  docker-compose.setup.yml  docker-compose.yml  pyproject.toml  sample_test.sh  test.npz  test.sh
models/: ModelRegistry.py  cfg_models.json
models/blazepose/: Dockerfile  main.py  reader.py  requirements.txt  run.sh  setup.sh
models/gast-net/: Dockerfile  gast_reader.py  reader.py  run.sh  set_device.sh  setup.sh
models/vibe/: Dockerfile  reader.py  set_device.sh  setup.sh
output/: aligned_data.csv  cal_data.csv  gast-gait_00_viewport_1_trim00.mp4-raw_data.csv  gast-sit_stand_test00.mp4-raw_data.csv  gast_aligned_data.csv  gast_cal_data.csv  ots_data.csv  results.csv  vibe-gait_00_viewport_1_trim00.mp4-raw_data.csv
scripts/: bp_video.py  compose_configurator.py  init_pyenv.sh  set_device.sh  set_torch_device.sh
spawner/: Dockerfile  main.py  model_run.sh  run.sh
spawner/models/blazepose/: config.yml
spawner/models/gast-net/: config.yml
spawner/models/vibe/: config.yml
src/: Dockerfile  Evaluator.py  GroundTruth.py  cfg_joints.json  data_parser.py  edr.py  evaluate.py  exec_models.sh  joints_kinematic_table.yml  main.py  model_analysis.py  model_comp.py  pose_eval.py  pose_gen.py  pyproject.toml  run.sh  test.py  truth_analysis.py  vid_proc.py
src/models/: ModelRegistry.py  blazepose_reader.py  cfg_joints.json  cfg_models.json  exec_blazepose.py  gast-requirements.txt  vibe_reader.py
src/models/blazepose/: Dockerfile  blazepose_reader.py
src/models/gast/: gast.sh  parse_gast.py
src/models/gast-net/: Dockerfile
src/models/vibe/: parse_vibe.py  vibe.sh
src/utils/: diagnostic_tools.py
utils/: diagnostic_tools.py
